[project]
name = "bac.page"
version = "0.3.3"
description = "bac.page URL shortener CLI"
requires-python = ">=3.11"
dependencies = [
    "qrcode[pil]",
    "numpy",
    "python-dotenv",
]

[project.scripts]
bac-page = "bac_page:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
